crates/vize_glyph/src/template/snapshots/vize_glyph__template__tests__directive_shorthand_v_slot.snap
---
source: crates/vize_glyph/src/template/mod.rs
expression: result.as_str()
---
<template #default="props">
</template>
