crates/vize_glyph/src/template/snapshots/vize_glyph__template__tests__format_self_closing.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<input type="text" />
