crates/vize_glyph/src/template/snapshots/vize_glyph__template__tests__format_simple_template.snap
---
source: crates/vize_glyph/src/template/mod.rs
expression: result.as_str()
---
<div>
  Hello
</div>
