crates/vize_glyph/src/template/snapshots/vize_glyph__template__tests__format_with_attributes.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<div id="main" class="container">Content</div>
