crates/vize_glyph/src/template/snapshots/vize_glyph__template__tests__interpolation_in_text.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
Hello {{ name }} world
