crates/vize_glyph/src/template/snapshots/vize_glyph__template__tests__v_else_boolean_attribute.snap
---
source: crates/vize_glyph/src/template.rs
expression: result.as_str()
---
<div v-if="show">A</div><div v-else>B</div>
